Analytics tracking working - impressions and closeouts

--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -26,3 +26,8 @@ scopes = "write_products"
 
 [auth]
 redirect_urls = [ "https://example.com/api/auth" ]
+
+[app_proxy]
+url = "/apps/exit-intent"
+subpath = "exit-intent"
+prefix = "apps"
