Fix theme extension registration - add app block
- Add blocks/exit-intent-app-block.liquid with proper schema
- Update shopify.extension.toml with api_version and extension_points
- Fix scopes in shopify.app.toml (all three required scopes)
- Extension now properly appears in theme editor App Embeds

This was the missing piece - theme extensions need app blocks to show up in the theme editor.

--- a/extensions/exit-intent-modal/shopify.extension.toml
+++ b/extensions/exit-intent-modal/shopify.extension.toml
@@ -1,3 +1,7 @@
+api_version = "2024-10"
 name = "exit-intent-modal"
-type = "theme"
 uid = "149bec6a-746c-0616-8f2d-f6810f0bd373e82dc3e7"
+type = "theme"
+
+[[extension_points]]
+target = "body"
