--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@shopify/shopify-app-session-storage-prisma": "^7.0.0",
     "isbot": "^5.1.31",
     "jstat": "^1.9.6",
+    "node-cron": "^4.2.1",
     "prisma": "^6.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
