--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-router/serve": "^7.9.3",
     "@remix-run/node": "^2.17.2",
     "@shopify/app-bridge-react": "^4.2.4",
+    "@shopify/polaris": "^13.9.5",
     "@shopify/shopify-app-react-router": "^1.0.0",
     "@shopify/shopify-app-session-storage-prisma": "^7.0.0",
     "isbot": "^5.1.31",
