Add gene performance aggregation (Meta-Learning)
- Aggregates gene performance across all stores
- Tracks which offers, headlines, CTAs, etc perform best
- Calculates confidence scores based on sample size and store diversity
- New stores inherit top 5 proven genes from network
- Test shows 17 genes aggregated from 3 stores
- Top gene: 10 dollar offer at 10.3% CVR, 10.34 profit/imp
- Network effects: New merchants start with proven winners
- Run: npm run aggregate-genes

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "react-router build",
     "dev": "shopify app dev",
     "evolution": "node app/cron/evolution-cycle.js",
+    "aggregate-genes": "node app/cron/aggregate-gene-performance.js",
     "config:link": "shopify app config link",
     "generate": "shopify app generate",
     "deploy": "shopify app deploy",
