Add seasonal pattern detection and tracking
- Detect current season (Black Friday, Holiday, Back to School, etc.)
- Record CVR, AOV, and profit per impression by season
- Analyze top-performing genes during each season
- Save recommended offers, headlines, and urgency settings
- Cron job to track seasonal performance automatically
- Run: npm run track-seasonal

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "shopify app dev",
     "evolution": "node app/cron/evolution-cycle.js",
     "aggregate-genes": "node app/cron/aggregate-gene-performance.js",
+    "track-seasonal": "node app/cron/track-seasonal-patterns.js",
     "config:link": "shopify app config link",
     "generate": "shopify app generate",
     "deploy": "shopify app deploy",
