--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "prisma": "^6.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.9.3",
+    "react-router": "^7.12.0",
+    "react-router-dom": "^7.12.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
